Fix mask location of VGA Monitor

--- a/Presets/Display Specific/VGA Monitor.ini
+++ b/Presets/Display Specific/VGA Monitor.ini
@@ -5,5 +5,5 @@ hfilter=Upscaling - Recommended/GS_Sharpness_085.txt
 vfilter=same
 sfilter=off
 gamma=Pure_Gamma/gamma_113.txt
-mask=CRT/Aperture Grille (No Scanlines) (1968).txt
+mask=Simple (Monochrome)/Aperture Grille (No Scanlines) (1968).txt
 maskmode=1x
