Fix Sony PVM.ini
Current setting wouldn't load the right scanlines as it's not pointing to the right directory.

--- a/Presets/Display Specific/Sony PVM.ini
+++ b/Presets/Display Specific/Sony PVM.ini
@@ -2,7 +2,7 @@
 #TrashUncle
 
 hfilter=Upscaling - Recommended/GS_Sharpness_040.txt
-vfilter=Scanlines - Brighter/Scan_Br_125_30.txt
+vfilter=Scanlines - Brighter/125pct Brightness/Scan_Br_125_30.txt
 sfilter=off
 gamma=Pure_Gamma/gamma_113.txt
 mask=Sony PVM (Generic) (~1980).txt
