--- a/Presets/Display Specific/Sony PVM.ini
+++ b/Presets/Display Specific/Sony PVM.ini
@@ -1,9 +1,9 @@
 #Sony PVM
 #TrashUncle
 
-hfilter=Upscaling - Recommended/GS_Sharpness_040.txt
-vfilter=Scanlines - Brighter/125pct Brightness/Scan_Br_125_30.txt
+hfilter=Upscaling - Recommended/GS_Sharpness_050.txt
+vfilter=Scanlines - Adaptive/SLA_Dk_030_Br_070.txt
 sfilter=off
 gamma=Pure_Gamma/gamma_113.txt
-mask=Sony PVM (Generic) (~1980).txt
+mask=Simple (Monochrome)/Aperture Grille (No Scanlines) (1968).txt
 maskmode=1x
