--- a/Presets/Display Specific/High Contrast MG.ini
+++ b/Presets/Display Specific/High Contrast MG.ini
@@ -1,5 +1,5 @@
 hfilter=Upscaling - Recommended/GS_Sharpness_060.txt
-vfilter=Scanlines - Standard/Scanlines_70.txt
+vfilter=Scanlines - Adaptive/SLA_Dk_050_Br_100.txt
 sfilter=off
 gamma=Poly_gamma/Poly 2.7.txt
 mask=MG Stripe (Magenta Green).txt
