--- a/Presets/Display Specific/JVC.ini
+++ b/Presets/Display Specific/JVC.ini
@@ -1,9 +1,9 @@
 #JVC
 #TrashUncle
 
-hfilter=Upscaling - Recommended/GS_Sharpness_060.txt
-vfilter=Scanlines - Adaptive/SLA_Dk_050_Br_100.txt
-sfilter=off
-gamma=Poly_gamma/Poly 2.7.txt
-mask=MG Stripe (Magenta Green).txt
+hfilter=Upscaling - Recommended/GS_Sharpness_050.txt
+vfilter=Scanlines - Scanlines - Adaptive/SLA_Dk_060_Br_100.txt
+sfilter=same
+gamma=Pure_Gamma/gamma_113.txt
+mask=Simple (Monochrome)/JVC 001 (Generic).txt
 maskmode=1x
