--- a/Presets/Display Specific/Sony Trinitron.ini
+++ b/Presets/Display Specific/Sony Trinitron.ini
@@ -2,7 +2,7 @@
 #TrashUncle
 
 hfilter=Upscaling - Recommended/GS_Sharpness_035.txt
-vfilter=Scanlines - Brighter/115pct Brightness/Scan_Br_115_30.txt
+vfilter=Scanlines - Adaptive/SLA_Dk_040_Br_080.txt
 sfilter=off
 gamma=Pure_Gamma/gamma_113.txt
 mask=Sony Trinitron (1968).txt
