Added Adaptive Scanlines to Presets as well as other tweaks. (#3)
Update presets to use adaptive scanlines.

--- a/Presets/Display Specific/JVC.ini
+++ b/Presets/Display Specific/JVC.ini
@@ -1,8 +1,8 @@
 #JVC
 #TrashUncle
 
-hfilter=Upscaling - Recommended/GS_Sharpness_050.txt
-vfilter=Scanlines - Brighter/120pct Brightness/Scan_Br_120_40.txt
+hfilter=Upscaling - Recommended/GS_Sharpness_040.txt
+vfilter=Scanlines - Scanlines - Adaptive/SLA_Dk_030_Br_060.txt
 sfilter=same
 gamma=Pure_Gamma/gamma_113.txt
 mask=Simple (Monochrome)/JVC 001 (Generic).txt
