Update scanline presets with adaptive scanlines

--- a/Presets/Scanlines - Medium.ini
+++ b/Presets/Scanlines - Medium.ini
@@ -1,5 +1,5 @@
 hfilter=Upscaling - Recommended/GS_Sharpness_070.txt
-vfilter=Scanlines - Brighter/105pct Brightness/Scan_Br_105_65.txt
+vfilter=Scanlines - Adaptive/SLA_Dk_030_Br_080.txt
 sfilter=same
-gamma=Pure_Gamma/gamma_113.txt
+gamma=off
 maskmode=off
