--- a/Presets/Scanlines - Soft.ini
+++ b/Presets/Scanlines - Soft.ini
@@ -1,5 +1,5 @@
 hfilter=Upscaling - Recommended/GS_Sharpness_055.txt
-vfilter=Scanlines - Brighter/115pct Brightness/Scan_Br_115_70.txt
+vfilter=Scanlines - Adaptive/SLA_Dk_060_Br_090.txt
 sfilter=same
-gamma=Pure_Gamma/gamma_113.txt
+gamma=off
 mask=off
