--- a/Presets/Scanlines - Vertical.ini
+++ b/Presets/Scanlines - Vertical.ini
@@ -1,5 +1,5 @@
-hfilter=Scanlines - Brighter/105pct Brightness/Scan_Br_105_65.txt
+hfilter=Scanlines - Adaptive/SLA_Dk_030_Br_080.txt
 vfilter=Upscaling - Recommended/GS_Sharpness_070.txt
 sfilter=same
-gamma=Pure_Gamma/gamma_113.txt
+gamma=off
 maskmode=off
