--- a/Presets/Display Specific/JVC.ini
+++ b/Presets/Display Specific/JVC.ini
@@ -2,7 +2,7 @@
 #TrashUncle
 
 hfilter=Upscaling - Recommended/GS_Sharpness_040.txt
-vfilter=Scanlines - Scanlines - Adaptive/SLA_Dk_030_Br_060.txt
+vfilter=Scanlines - Adaptive/SLA_Dk_030_Br_060.txt
 sfilter=same
 gamma=Pure_Gamma/gamma_113.txt
 mask=Simple (Monochrome)/JVC 001 (Generic).txt
