--- a/Presets/General Hardware/Console - 5thGen.ini
+++ b/Presets/General Hardware/Console - 5thGen.ini
@@ -5,5 +5,5 @@ hfilter=Upscaling - Recommended/GS_Sharpness_055.txt
 vfilter=Scanlines - Adaptive/SLA_Dk_070_Br_080.txt
 sfilter=same
 gamma=Poly_Gamma/Poly 2.4.txt
-mask=Simple (Monochrome)/RetroTink/Consumer-2.txt
+mask=Simple (Monochrome)/RetroTink/AG-2.txt
 maskmode=1x
