--- a/Presets/General Hardware/Arcade.ini
+++ b/Presets/General Hardware/Arcade.ini
@@ -5,5 +5,5 @@ hfilter=Upscaling - Lanczos Bicubic etc/lanczos2_12.txt
 vfilter=Scanlines - Adaptive/SLA_Dk_070_Br_080.txt
 sfilter=same
 gamma=Poly_Gamma/Poly 2.3.txt
-mask=Sony PVM (Generic) (~1980).txt
+mask=Simple (Monochrome)/Sony PVM (Generic) (~1980).txt
 maskmode=1x
