Adding additional arcade filters
These new arcade filters are meant to compliment the existing Arcade one. They represent what you'd might see playing a game with monitor display tech from the early 80s and the 90s. Updated the existing Arcade.ini (and vertical) so it's description is similar to the others and identifies it as a late 80s preset.

--- a/Presets/General Hardware/Arcade.ini
+++ b/Presets/General Hardware/Arcade.ini
@@ -1,5 +1,5 @@
-#Standard Arcade games
-#By @RGarciaLago
+#Settings to mimic an arcade game monitor from the late 80s
+By @RGarciaLago
 
 hfilter=Upscaling - Lanczos Bicubic etc/lanczos2_12.txt
 vfilter=Scanlines - Adaptive/SLA_Dk_070_Br_080.txt
