--- a/Presets/General Hardware/Arcade 80s - Vertical.ini
+++ b/Presets/General Hardware/Arcade 80s - Vertical.ini
@@ -1,9 +1,9 @@
 #Settings to mimic a vertically oriented arcade game monitor from the late 80s
-By @RGarciaLago
+#By @RGarciaLago
 
-hfilter=Scanlines - Adaptive/SLA_Dk_070_Br_080.txt
-vfilter=Upscaling - Lanczos Bicubic etc/lanczos2_12.txt
+hfilter=Scanlines - Adaptive/SLA_Dk_060_Br_070.txt
+vfilter=Upscaling - Recommended/GS_Sharpness_040.txt
 sfilter=same
-gamma=Poly_Gamma/Poly 2.3.txt
+gamma=Pure_Gamma/gamma_150.txt
 mask=Simple (Monochrome)/Sony PVM (Generic) (~1980).txt
 maskmode=1x rotated
