Changed gamma settings
Received feedback that the Arcade 80s presets were too dark so I changed them to use Poly Gamma.

--- a/Presets/General Hardware/Arcade 80s.ini
+++ b/Presets/General Hardware/Arcade 80s.ini
@@ -4,6 +4,6 @@
 hfilter=Upscaling - Recommended/GS_Sharpness_040.txt
 vfilter=Scanlines - Adaptive/SLA_Dk_060_Br_070.txt
 sfilter=same
-gamma=Pure_Gamma/gamma_150.txt
+gamma=Poly_Gamma/Poly 2.8.txt
 mask=Simple (Monochrome)/Sony PVM (Generic) (~1980).txt
 maskmode=1x
