Updated comments for two presets
Updated the comments in the `Arcade 80s - Vertical.ini` and `Console - 5thGen.ini` presets to be more accurate.

--- a/Presets/General Hardware/Console - 5thGen.ini
+++ b/Presets/General Hardware/Console - 5thGen.ini
@@ -1,4 +1,4 @@
-#5th generation Game Consoles (PlayStation, Saturn, Jaguar, etc.)
+#5th generation Game Consoles (PlayStation, Saturn, N64, etc.)
 #By @RGarciaLago
 
 hfilter=Upscaling - Recommended/GS_Sharpness_055.txt
