--- a/Presets/General Hardware/Arcade 80s - Vertical.ini
+++ b/Presets/General Hardware/Arcade 80s - Vertical.ini
@@ -1,4 +1,4 @@
-#Settings to mimic a vertically oriented arcade game monitor from the late 80s
+#Settings to mimic a vertically oriented arcade game monitor from the early 80s
 #By @RGarciaLago
 
 hfilter=Scanlines - Adaptive/SLA_Dk_060_Br_070.txt
